Kubernetes/deploymentBackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-node
  namespace: sergio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-node
  template:
    metadata:
      labels:
        app: backend-node
    spec:
      containers:
      - name: backend-node
        image: ssorrosal/backend-node:latest
        ports:
        - containerPort: 3000
