Kubernetes/deploymentFrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  namespace: sergio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: ssorrosal/frontend-react:latest
        ports:
        - containerPort: 80
