Kubernetes/serviceBackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-node-service
  namespace: sergio  
spec:
  type: ClusterIP
  selector:
    app: backend-node  
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
